<resources>
    <string name="app_name">Filestorage Sample</string>

    <string name="no_internet_connection_error_message">Не удалось загрузить данные. Проверьте соединение с интернетом и попробуйте еще раз</string>
    <string name="bad_response_error_message">Произошла ошибка загрузки данных на экране. Попробуйте позже еще раз</string>
    <string name="unexpected_error_error_message">@string/default_http_error_message</string>
    <string name="default_http_error_message">Произошла ошибка загрузки данных, возможно, не вся информация на экране актуальна</string>

    <string name="save_to_cache_btn_text">Save to cache</string>
    <string name="get_from_cache_btn_text">Get from cache</string>
    <string name="clear_cache_btn_text">Clear cache</string>
    <string name="empty_cache_message">Кэш пуст</string>
    <string name="null_ip_message">IP не был успешно загружен</string>
    <string name="cache_created_message">IP был сохранен в кэш</string>
    <string name="cache_deleted_message">Кэш был удален</string>

    <!-- placeholder -->
    <string name="placeholder_error_text">Ошибка загрузки данных</string>
    <string name="placeholder_error_btn_text">Повторить</string>
</resources>
