<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <TextView
                android:id="@+id/ip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin" />

            <Button
                android:id="@+id/save_to_cache_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_below="@id/ip_tv"
                android:text="@string/save_to_cache_btn_text" />

            <Button
                android:id="@+id/save_to_secure_cache_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_below="@id/ip_tv"
                android:layout_alignParentEnd="true"
                android:text="@string/save_to_secure_cache_btn_text" />

            <Button
                android:id="@+id/get_from_cache_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_below="@id/save_to_cache_btn"
                android:text="@string/get_from_cache_btn_text" />

            <Button
                android:id="@+id/get_from_secure_cache_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_below="@id/save_to_secure_cache_btn"
                android:layout_alignParentEnd="true"
                android:text="@string/get_from_secure_cache_btn_text" />

            <Button
                android:id="@+id/clear_cache_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/get_from_cache_btn"
                android:text="@string/clear_cache_btn_text" />
        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <ru.surfstudio.android.sample.common.ui.base.placeholder.PlaceHolderView
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        app:pvErrorTitle="@string/placeholder_error_text"
        app:pvErrorButtonText="@string/placeholder_error_btn_text" />
</RelativeLayout>